labs/concepts/pv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: web-frontend
  type: ClusterIP
  sessionAffinity: ClientIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
